--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TestApp</title>
+  <title>sandbox</title>
+<!--  Most routing applications should add a <base> element to the index.html as the first child in the <head> tag to tell the router how to compose navigation URLs.-->
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
