--- a/test-app/index.html
+++ b/test-app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>sandbox</title>
 <!--  Most routing applications should add a <base> element to the index.html as the first child in the <head> tag to tell the router how to compose navigation URLs.-->
-  <base href="/">
+  <base href="https://glosik.github.io/nostromo/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
