--- a/test-app/index.html
+++ b/test-app/index.html
@@ -11,5 +11,5 @@
 <link rel="stylesheet" href="styles.a6e6b93a05dd3dfec667.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.fec146f4472ee5fb9cac.js"></script><script type="text/javascript" src="main.45a525cb247005802061.js"></script></body>
+<script type="text/javascript" src="test-app/runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.fec146f4472ee5fb9cac.js"></script><script type="text/javascript" src="main.45a525cb247005802061.js"></script></body>
 </html>
