--- a/test-app/index.html
+++ b/test-app/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>sandbox</title>
+  <title>sand box</title>
 <!--  Most routing applications should add a <base> element to the index.html as the first child in the <head> tag to tell the router how to compose navigation URLs.-->
-  <base href="https://glosik.github.io/nostromo">
+  <base href="https://glosik.github.io/nostromo/test-app">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
